Added option to filter certificates